force-app/main/default/objects/Queue_Routing_Rule_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <description>Application Course Preference field for this condition</description>
        <label>Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admission_Category__c</fullName>
                    <label>Admission Category</label>
                </value>
                <value>
                    <fullName>Attendance_Mode__c</fullName>
                    <label>Attendance Mode</label>
                </value>
                <value>
                    <fullName>Course_Code__c</fullName>
                    <label>Course Code</label>
                </value>
                <value>
                    <fullName>Location_Code__c</fullName>
                    <label>Location Code</label>
                </value>
                <value>
                    <fullName>Managing_Faculty__c</fullName>
                    <label>Managing Faculty</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Logical Operator for this condition</description>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EQUALS</fullName>
                    <default>true</default>
                    <label>EQUALS</label>
                </value>
                <value>
                    <fullName>NOT EQUAL TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Routing_Rule__c</fullName>
        <label>Queue Routing Rule</label>
        <referenceTo>Queue_Routing_Rule__c</referenceTo>
        <relationshipLabel>Queue Routing Rule Conditions</relationshipLabel>
        <relationshipName>Queue_Routing_Rule_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value for this condition</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Queue Routing Rule Condition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Queue_Routing_Rule__c</columns>
        <columns>Field__c</columns>
        <columns>Operator__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QRRC-{000000}</displayFormat>
        <label>QRR Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Routing Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>